<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#039BE5"
    style="@style/Widget.MaterialComponents.CardView"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">
        <TextView
            android:id="@+id/Name"
            android:text="@string/Name"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/Category"
            android:text="@string/category"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/image_view_upload"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/Description"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
        <ImageView
            android:id="@+id/imageViewSwap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            app:srcCompat="@drawable/ic_swap"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/SwapFor"
            android:text="@string/swap_for"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/custom_profile_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/avatar"
                android:cropToPadding="true"
                />
        <TextView
            android:id="@+id/UserName"
            android:text="@string/contact_name"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
        <ImageView
            android:id="@+id/imageViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            app:srcCompat="@drawable/ic_phone"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/UserPhone"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <ImageView
                android:id="@+id/imageViewCity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                app:srcCompat="@drawable/ic_location"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:id="@+id/UserCity"
                android:text="@string/city"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/button_make_inquiry"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/make_an_inquiry"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>